A freezing bug on safari fixed. Changes on the statistics end.

--- a/website/css/hashtux.css
+++ b/website/css/hashtux.css
@@ -192,6 +192,10 @@ a {
     color: #cccccc;
 }
 
+.darkgreytext {
+    color: #3d3d3d;
+}
+
 /* The commercial use panel also uses .optionspanel, just some minor differences */
 .commercial_use_panel {
 	margin: auto !important;
@@ -245,7 +249,7 @@ a {
     margin-top: 20px;
     border: none;
     border-radius: 0;
-    float: right;
+    float: left;
 }
 
 .savebutton {
@@ -255,7 +259,7 @@ a {
     margin-top: 20px;
     border: none; 
     border-radius: 0;
-    float:left;
+    float: right;
 }
 
 .gridalert {
